--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,11 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.3
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
   hive_generator: ^2.0.0
   build_runner: ^2.3.2
 
@@ -60,7 +60,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 flutter_launcher_icons:
-  image_path: "assets/images/letter-p.png"
+  image_path: "assets/images/Logo.png"
   android: true
   ios: true
   remove_alpha_ios: true
